# jishocli

./: CHANGELOG.md  README.md  pyproject.toml
src/jishocli/: __init__.py
