[project]
name = "jishocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jishocli = "jishocli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
